<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mint Medical</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="skip">Skip &gt;&gt;</string>
    <string name="done">Done</string>
    <string name="title_nofitication">"One Medical" Would Like to Send  You Push Notifications.</string>
    <string name="title_message">Notifications may include alerts, sound abd icon badges. These can be configured in Settings.</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="ok">OK</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="joinnow">Join Now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loadding">loadding</string>
    <string name="about">About</string>
    <string name="whatweoffer">What we Offer</string>
    <string name="blank"></string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="notyetamember">Not yet a member</string>
    <string name="cancel">Cancel</string>
    <string name="s4">Appointment</string>
    <string name="Youhavenoupcomingappointments">You have no upcoming appointments</string>
    <string name="newappointment">New Appointment</string>
    <string name="appointmenthistory">Appointment History</string>
    <string name="s4_no1">You have no history appointments. Please start your first one by tap on “New Appointment” above</string>
    <string name="iwanttoseeavailabilityfor">I want to see availability for…</string>
    <string name="myprimarycareteam">My primary care team</string>
    <string name="nonselected">Non selected</string>
    <string name="aspecificoffice">A Specific Office</string>
    <string name="aspecificdoctor">A specific doctor</string>
    <string name="iwanttobeseenfor">I want to be seen for…</string>
    <string name="briefvisit">Brief visit</string>
    <string name="eg">E.g. Cold/flu, sinus infection, joint sprain</string>
    <string name="standardvisit">Standard visit</string>
    <string name="eg2">E.g.  Abnormal pain, chest pain</string>
    <string name="physicalexam">Physical exam</string>
    <string name="acomprehensive">A comprehensive health  evaluation</string>
    <string name="s4c1">I would like to cover…</string>
    <string name="s4c2">Tell us the reason for your visit</string>
    <string name="next">Next</string>
    <string name="s4a_header">Appointment</string>
    <string name="s4b_header">Visit Type</string>
    <string name="s4c_header">Reason</string>
    <string name="s4d_header">Availability</string>
    <string name="s4e_header">Details</string>
    <string name="s4f_header">See you soon</string>
    <string name="s4g_header">Select Office</string>
    <string name="s4h_header">Select Doctor</string>
    <string name="s4i_header">Appointment</string>
    <string name="s4new">New</string>
    <string name="bookappointment">Book Appointment</string>
    <string name="visittype">Visit type</string>
    <string name="reasonforthisvisit">Reason for this visit</string>
    <string name="s4f1">Your Appointment is booked!</string>
    <string name="s4f2">Please arrive 5 minutes before your appointment to allow for check-in.\n\n
        Should you need to cancel, please do so at least 24 hrs in advance.</string>
    <string name="s4f3"></string>
    <string name="searchfordoctorname">Search for Doctor Name</string>
    <string name="s51">I think I have…</string>
    <string name="s53">Send request</string>
    <string name="s52">Tell us more detail of your issue and we will contact you very soon</string>
    <string name="s5header">New case</string>
    <string name="s5face2">Your request is sent! Our team will contact you soon to help you.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="account">Account</string>
    <string name="s9button">Update my account</string>
    <string name="s91">User Name</string>
    <string name="s92">Member since 2014</string>
    <string name="s93">Doctor</string>
    <string name="s6header">Prescriptions</string>
    <string name="office">Office</string>
    <string name="emailaddress">Email address</string>
    <string name="s11header">News and Alerts</string>
    <string name="s6_1">Prescription request history</string>
    <string name="s6_2">Request new medications</string>
    <string name="s6_3">Check request status and messages</string>
    
    <string name="s6b1">Amlodipine</string>
    <string name="s6b2">Enalapril</string>
    <string name="s6b3">Simvastatin</string>
    <string name="s6b4">Metformin</string>
    <string name="s6b5">Request past medications</string>
    <string name="s6b6">Request new medications</string>

    <color name="listview_spac">#e0e0e0</color>
    <color name="itemheader">#e24f02</color>
    <color name="item_textcontent">#999999</color>
    <color name="item_textcontent_date">#cccccc</color>
    <string name="s10a_1">Mint Medical is...</string>
    <string name="s10a_3">To be provided by client</string>
    <string name="s10b_1">What we offer</string>

</resources>