<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/s4bmaincontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left|center"
            android:text="@string/iwanttobeseenfor" />

                <LinearLayout
            android:id="@+id/s11spac"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/listview_spac"
            android:orientation="horizontal" >
        </LinearLayout>

        <ListView
            android:id="@+id/s4bListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/id1"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/briefvisit" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eg" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item_img2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#123456" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/id2"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standardvisit" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eg" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item_img2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#123456" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/id3"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physicalexam" />

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acomprehensive" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item_img2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>