<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >

    <vnp.mr.mintmedical.HeaderView
        android:id="@+id/activitymain_headerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >
    </vnp.mr.mintmedical.HeaderView>

    <LinearLayout
        android:id="@+id/s9content_main"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center|top"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/s9main_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="horizontal" >

            <vnp.mr.mintmedical.view.AvatarView
                android:id="@+id/s9avatarView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </vnp.mr.mintmedical.view.AvatarView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/s9texxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s91"
                    android:textColor="#e24f02"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/s9texxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s92"
                    android:textColor="#999999" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/s9_main_block2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/s9texxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s93"
                android:textColor="#333333"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/s9texxt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nonselected"
                android:textColor="#b2b2b2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#e0e0e0"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/s9_main_block3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/s9texxt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailaddress"
                android:textColor="#333333"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/s9texxt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#b2b2b2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#e0e0e0"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/s9button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/s9_updatemyaccount" />
    </LinearLayout>

</LinearLayout>